file updated by gw:gw -T8 Token usage summary for model 'gpt-5.6-luna-2026-07-09': Input = 17824138, Cached = 10986411, Output = 231321. $4.05